lib/tests/fixtures/compiler/evaluation/type_alias_cycle.pp
type A = B
type B = A
notice 0 =~ A
